src/test/compile-fail/moves-based-on-type-capture-clause-bad.rs
use std::task;

fn main() {
    let x = ~"Hello world!";
    do task::spawn {
        println!("{}", x);
    }
    println!("{}", x); //~ ERROR use of moved value
}
